--- a/diagnostics/dummy/env-dummy.yml
+++ b/diagnostics/dummy/env-dummy.yml
@@ -1,7 +1,7 @@
 # At the moment diagnostics have to create their own environment
 # with the required dependencies.
 
-name: dummy-diagnostic
+name: dummy
 channels:
   - conda-forge
   - numba
@@ -14,6 +14,6 @@ dependencies:
   - pip
   - pip:
     # pip install -e of AQUA itself
-    - -e ./../../[tests] # this is the path to the AQUA root folder
+    - -e ./../../[all] # this is the path to the AQUA root folder
     # these below are only required for the dummy diagnostic
     # - dummy-pip-package
