--- a/.github/workflows/dummy-diagnostic.yml
+++ b/.github/workflows/dummy-diagnostic.yml
@@ -5,8 +5,8 @@ on:
   # in order to waste less resources
   #pull_request:
   #  paths:
-  #    - 'diagnostics/dummy-diagnostic/**'
-  #    - 'tests/dummy-diagnostic/**'
+  #    - 'diagnostics/dummy/**'
+  #    - 'tests/dummy/**'
   workflow_dispatch:
   #schedule:
   #  - cron: "0 3 * * 1" # Run every Monday night at 3AM UTC
@@ -49,7 +49,7 @@ jobs:
 # Run diagnostic tests
       - name: Download and setup dummy-diagnostic tests
         run: |
-          ./tests/dummy-diagnostic/download_data_for_tests.sh
+          ./tests/dummy/download_data_for_tests.sh
 
       - name: Run dummy-diagnostic tests
         run: |
