--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "gribscan",
     "ecCodes",
     "intake",
-    "intake-esm",
+    "intake-esm>=2023.4.20",
     "intake-xarray",
     "jinja2",
     "metpy",
