introduce a lra-only cli

--- a/cli/lra/only_lra.yaml
+++ b/cli/lra/only_lra.yaml
@@ -1,24 +1,13 @@
 #This include the option for the regridding
 target:
   resolution: r100
-  frequency: monthly
+  frequency: daily
   outdir: /pfs/lustrep3/projappl/project_465000454/padavini/LRA
   tmpdir: /pfs/lustrep3/projappl/project_465000454/padavini/tmp
+  opadir: /pfs/lustrep3/projappl/project_465000454/padavini/one_pass
 
 configdir: '../../config/'
 loglevel: INFO
-
-# do you want to use intermediate opa layer to genrate LRA?
-opa:
-  use_opa: True
-  opacheckpoint: True
-  opadir: /pfs/lustrep3/projappl/project_465000454/padavini/one_pass
-
-# do you want to use GSV direct access
-gsv: 
-  use_gsv: True
-  start: 20200120
-  end: 20200501
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
