--- a/cli/lra/only_lra.yaml
+++ b/cli/lra/only_lra.yaml
@@ -1,7 +1,7 @@
 #This include the option for the regridding
 target:
   resolution: r100
-  frequency: daily
+  frequency: monthly
   outdir: /pfs/lustrep3/projappl/project_465000454/padavini/LRA
   tmpdir: /pfs/lustrep3/projappl/project_465000454/padavini/tmp
   opadir: /pfs/lustrep3/projappl/project_465000454/padavini/one_pass
