--- a/diagnostics/dummy/config/config.yaml
+++ b/diagnostics/dummy/config/config.yaml
@@ -2,11 +2,8 @@
 # This file is in YAML format
 # Adapt it to your needs
 
-conf1:
-  - 'spec1'
-  - 'spec2'
-
 # It may contains folder defaults
 outputfig: './figs'
 outputdir: './output'
 filename: 'dummy'
+custom_diagvar: 'I was read from config.yaml'
