remove cache env

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -50,10 +50,10 @@ jobs:
           environment-file: environment.yml
           environment-name: aqua
           cache-downloads: true
-          cache-environment: true
+          cache-environment: false
           condarc: |
             channels:
-              - numba
+              - numbax
               - conda-forge
           create-args: >-
               python=${{ matrix.python-version }}
