--- a/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
@@ -7,12 +7,14 @@ sources:
     driver: zarr
     args:
       consolidated: false
-      urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm2d.json
+      urlpath: 
+        reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm2d.json
   3D_1h6h_native:
     driver: zarr
     args:
       consolidated: false
-      urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm3d.json
+      urlpath: 
+        reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm3d.json
   2D_monthly_0.25deg:
     driver: zarr
     args:
@@ -45,12 +47,14 @@ sources:
     driver: zarr
     args:
       consolidated: false
-      urlpath: reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h_wam/json.dir/atm2d.json
+      urlpath: 
+        reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h_wam/json.dir/atm2d.json
   lra-r100-monthly:
     driver: netcdf
     description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv3/IFS/tco2559-ng5-cycle3/r100/monthly/*tco2559-ng5-cycle3_r100_monthly_????.nc
+      urlpath: 
+        /work/bb1153/b382076/LRAv3/IFS/tco2559-ng5-cycle3/r100/monthly/*tco2559-ng5-cycle3_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
