--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -84,6 +84,16 @@ source_grids:
         extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_025.txt
         cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_025.nc
         cellarea_var: cell_area
+      2D_monthly_1deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_100.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_100.nc
+        cellarea_var: cell_area
+      3D_monthly_1deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_100.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_100.nc
+        cellarea_var: cell_area
   
     tco1279-orca025-cycle3:
       default: 
@@ -112,6 +122,16 @@ source_grids:
         space_coord: ["value"]
         extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_025.txt
         cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_025.nc
+        cellarea_var: cell_area
+      2D_monthly_1deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_100.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_100.nc
+        cellarea_var: cell_area
+      3D_monthly_1deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_100.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_100.nc
         cellarea_var: cell_area
   
     tco1279-orca025:
