--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -62,9 +62,11 @@ models:
                     tprate:
                         source: pr
                         grib: true
+                        units: kg m**-2 s**-1
                     mlsprt:
                         source: prlr
                         grib: true
+                        units: kg m**-2 s**-1
                     tcwv:
                         source: prw
                         grib: true
