--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -9,11 +9,13 @@ models:
                     tprate:
                         source: tp
                         grib: true
-                        decumulate: true    
+                        decumulate: true
+                        units: kg m**-2 s**-1 
                     cprate:
                         source: cp
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mlsprt:
                         source: lsp
                         grib: true
@@ -22,19 +24,23 @@ models:
                         source: e
                         grib: true
                         src_units: m
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1
                     esrate:
                         source: es
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1
                     mrort:
                         source: ro
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
                         grib: true
@@ -81,10 +87,12 @@ models:
                         src_units: m s**-1
                         source: tp
                         grib: true
+                        units: kg m**-2 s**-1
                     mtsfr:
                         src_units: m s**-1
                         source: sf
                         grib: true
+                        units: kg m**-2 s**-1
                     mslhfl:
                         src_units: W/m2
                         source: slhf
@@ -125,24 +133,29 @@ models:
                     tprate:
                         source: tp
                         grib: true
-                        decumulate: true    
+                        decumulate: true
+                        units: kg m**-2 s**-1   
                     erate:
                         source: e
                         grib: true
                         src_units: m
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1 
                     esrate:
                         source: es
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1
                     mrort:
                         source: ro
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
                         grib: true
@@ -189,11 +202,13 @@ models:
                         src_units: m s**-1
                         source: tp
                         grib: true
-                        decumulate: true    
+                        decumulate: true
+                        units: kg m**-2 s**-1   
                     mtsfr:
                         src_units: m s**-1
                         source: sf
                         grib: true
+                        units: kg m**-2 s**-1
                     mslhfl:
                         src_units: W/m2
                         source: slhf
@@ -234,32 +249,39 @@ models:
                     tprate:
                         source: tp
                         grib: true
-                        decumulate: true    
+                        decumulate: true
+                        units: kg m**-2 s**-1   
                     cprate:
                         source: cp
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mlsprt:
                         source: lsp
                         grib: true
-                        decumulate: true  
+                        decumulate: true
+                        units: kg m**-2 s**-1 
                     erate:
                         source: e
                         grib: true
                         src_units: m
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1 
                     esrate:
                         source: es
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        units: kg m**-2 s**-1 
                     mrort:
                         source: ro
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
                         decumulate: true
+                        units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
                         grib: true
