--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -10,37 +10,43 @@ models:
                         source: tp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     cprate:
                         source: cp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mlsprt:
                         source: lsp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     erate:
                         source: e
                         grib: true
-                        src_units: m
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     esrate:
                         source: es
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mrort:
                         source: ro
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
@@ -85,37 +91,37 @@ models:
                 data_model: ifs
                 vars:
                     tprate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: tp
                         grib: true
                         units: kg m**-2 s**-1
                     cprate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: cp
                         grib: true
                         units: kg m**-2 s**-1
                     mlsprt:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: lsp
                         grib: true
                         units: kg m**-2 s**-1 
                     erate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: e
                         grib: true
                         units: kg m**-2 s**-1 
                     esrate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: es
                         grib: true
                         units: kg m**-2 s**-1 
                     mrort:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: ro
                         grib: true
                         units: kg m**-2 s**-1
                     mtsfr:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: sf
                         grib: true
                         units: kg m**-2 s**-1
@@ -160,26 +166,31 @@ models:
                         source: tp
                         grib: true
                         decumulate: true 
+                        src_units: m
                         units: kg m**-2 s**-1
                     erate:
                         source: e
                         grib: true
                         decumulate: true 
+                        src_units: m
                         units: kg m**-2 s**-1 
                     esrate:
                         source: es
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mrort:
                         source: ro
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        src_units: m 
                         units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
-                        decumulate: true 
+                        decumulate: true
+                        src_units: m 
                         units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
@@ -224,37 +235,37 @@ models:
                 data_model: ifs
                 vars:
                     tprate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: tp
                         grib: true
                         units: kg m**-2 s**-1
                     cprate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: cp
                         grib: true
                         units: kg m**-2 s**-1
                     mlsprt:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: lsp
                         grib: true
                         units: kg m**-2 s**-1 
                     erate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: e
                         grib: true
                         units: kg m**-2 s**-1 
                     esrate:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: es
                         grib: true
                         units: kg m**-2 s**-1 
                     mrort:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: ro
                         grib: true
                         units: kg m**-2 s**-1
                     mtsfr:
-                        src_units: kg m**-2 s**-1
+                        src_units: m s**-1
                         source: sf
                         grib: true
                         units: kg m**-2 s**-1
@@ -299,37 +310,43 @@ models:
                         source: tp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     cprate:
                         source: cp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mlsprt:
                         source: lsp
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1 
                     erate:
                         source: e
                         grib: true
-                        src_units: m
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1 
                     esrate:
                         source: es
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1 
                     mrort:
                         source: ro
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mtsfr:
                         source: sf
                         grib: true
                         decumulate: true
+                        src_units: m
                         units: kg m**-2 s**-1
                     mslhfl:
                         source: slhf
