--- a/config/fixes/ICON.yaml
+++ b/config/fixes/ICON.yaml
@@ -62,10 +62,12 @@ models:
                     tprate:
                         source: pr
                         grib: true
+                        src_units: kg m**-2 s**-1
                         units: kg m**-2 s**-1
                     mlsprt:
                         source: prlr
                         grib: true
+                        src_units: kg m**-2 s**-1
                         units: kg m**-2 s**-1
                     tcwv:
                         source: prw
