--- a/diagnostics/global_time_series/cli/config.yaml
+++ b/diagnostics/global_time_series/cli/config.yaml
@@ -1,14 +1,27 @@
 timeseries:
-    model: "ICON"
-    exp: "ngc3028"
-    variable: "2t"
-    reader_kw:
-        source: "P1D"
-        zoom: 0
-    plot_kw:
-        color: "tab:red"
-    plot_era5: true
-    resample: "M"
+    sources:
+        icon:
+            model: "ICON"
+            exp: "ngc3028"
+            variable: "2t"
+            reader_kw:
+                source: "P1D"
+                zoom: 0
+            plot_kw:
+                color: "tab:blue"
+                label: "ICON"
+            plot_era5: true
+            resample: "M"
+        ifs:
+            model: "IFS"
+            exp: "tco1279-orca025-cycle3"
+            variable: "2t"
+            reader_kw:
+                source: "lra-r100-monthly"
+            plot_kw:
+                color: "tab:red"
+                label: "IFS"
+            resample: "M"
     savefig: "timeseries.png"
 gregory:
     model: "ICON"
