few updates, working regrid

--- a/config/machines/levante/catalog/EN4/en4.yaml
+++ b/config/machines/levante/catalog/EN4/en4.yaml
@@ -8,8 +8,8 @@ sources:
     description: EN4 data v4.2.2_g10 version from 1950 to 2022
     driver: netcdf
     args:
-      urlpath: '/work/bb1153/b382119/EN4/so/*nc'
+      urlpath: '/work/bb1153/b382119/EN4/*-1950_2022.nc'
       chunks: 
-        time: 1
+        time: 12
       xarray_kwargs:
         decode_times: True
