--- a/diagnostics/teleconnections/cli/teleconnections_config.yaml
+++ b/diagnostics/teleconnections/cli/teleconnections_config.yaml
@@ -2,8 +2,9 @@ telecname: 'NAO' # NAO or ENSO
 model: 'ERA5'
 exp: 'era5'
 source: 'monthly'
-regrid: 'r100'
-diagdir: None
+#regrid: 'r100'
+# freq: 'monthly' # uncomment if data are not monthly
+# zoom: None # needed only if ICON
 months_window: 3
 # outputfig: 'path/to/fig/folder'
 # outputdir: 'path/to/files/folder'
