updated configuration to last aqua

--- a/diagnostics/ecmean/config/interface_AQUA.yml
+++ b/diagnostics/ecmean/config/interface_AQUA.yml
@@ -1,4 +1,4 @@
-# Configuration yaml file for EC-Earth4 model and variables
+# Configuration yaml file for AQUA model and variables
 # 
 # Possible filetype attributes for variables are defined in the model section
 # The full path is $basedir/$dir/$filename
@@ -42,9 +42,9 @@ filetype:
 # If a relative path is used this is attached to $ECEDIR/$basedir
 component:
   cmoratm:
-    maskfile: '/home/b/b382076/work/ecmean/data/mask_r100.nc'
+    maskfile: '/work/bb1153/b382076/AQUA-archive/masks/lonlat/atm_mask_r100.nc'
     gridfile: ''
-    areafile: '/work/bb1153/b382075/nextgems/weights/cell_area_r100.nc'
+    areafile: '/work/bb1153/b382076/AQUA-archive/grids/lonlat/cell_area_r100.nc'
   cmoroce:
     maskfile: ''
     gridfile: ''
