remove the pinning of GSV interface

--- a/environment.yml
+++ b/environment.yml
@@ -48,6 +48,6 @@ dependencies:
     # get OPA
     - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
     - git+https://github.com/ecmwf/pyfdb.git@master
-    - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git@v0.3.1
+    - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
     # pip install -e of AQUA itself
     - -e .
